# irminsul-update-test

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: mdbook.yaml  release.yaml  rust.yml
docs/: book.toml
docs/src/: 01-introduction.md  02-quickstart.md  03-resources.md  04-thanks.md  SUMMARY.md
src/: admin.rs  app.rs  capture.rs  good.rs  main.rs  monitor.rs  player_data.rs  update.rs
